# tree-sitter-cloudformation-guard

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.ebnf  grammar.js  log.html  package-lock.json  package.json  pyproject.toml  runtimes.guard  setup.py  test.sh  tree-sitter.json
.github/workflows/: test.yaml
bindings/c/: tree-sitter-guard.h  tree-sitter-guard.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_guard/: __init__.py  __init__.pyi  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterGuardTests/: TreeSitterGuardTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: Assignments.txt  Clause.txt  Comments.txt  Conditions.txt  Loop.txt  Query Block.txt  Real Rules.txt  Rule Block.txt  When Block.txt
test/tags/: tags.guard
